feat: implement upload and download picture
